<resources>
    <string name="app_name">A1_Benjamin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_in_your_personal_finance">Welcome in your personal finance</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="see_the_historic">See the historic</string>
    <string name="add_an_expenditure">Add an Expenditure</string>
    <string name="add_an_income">Add an Income</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="validate">Validate</string>
    <string name="enter_the_informations">Enter the informations</string>
    <string name="welcome_in_your_personal_finance_app">Welcome in your personal finance app</string>
    <string name="todo">TODO</string>
    <string name="balance">balance</string>
</resources>