<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="376dp"
        android:layout_height="72dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="32dp"
        android:background="#C7E2F8"
        app:layout_constraintBottom_toTopOf="@+id/title_txt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/validate_btn2"
        android:layout_width="141dp"
        android:layout_height="38dp"
        android:layout_marginStart="153dp"
        android:layout_marginLeft="153dp"
        android:layout_marginEnd="153dp"
        android:layout_marginRight="153dp"
        android:layout_marginBottom="204dp"
        android:text="@string/validate"
        android:textColor="#FFFFFF"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_txt2" />

    <EditText
        android:id="@+id/date_txt2"
        android:layout_width="178dp"
        android:layout_height="39dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/category_spinner2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/title_txt2" />

    <Spinner
        android:id="@+id/category_spinner2"
        android:layout_width="178dp"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        app:layout_constraintBottom_toTopOf="@+id/amount_txt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/date_txt2" />

    <EditText
        android:id="@+id/title_txt2"
        android:layout_width="178dp"
        android:layout_height="39dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        app:layout_constraintBottom_toTopOf="@+id/date_txt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/category"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/category_spinner2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:text="@string/date"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/date_txt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:text="@string/amount"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/validate_btn2"
        app:layout_constraintEnd_toStartOf="@+id/amount_txt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="67dp"
        android:layout_height="25dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/title"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/title_txt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/amount_txt2"
        android:layout_width="178dp"
        android:layout_height="39dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        app:layout_constraintBottom_toTopOf="@+id/validate_btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/category_spinner2" />

</androidx.constraintlayout.widget.ConstraintLayout>